--- a/package.json
+++ b/package.json
@@ -11,31 +11,36 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@popperjs/core": "^2.11.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@popperjs/core": "^2.11.4",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "conventional-changelog": "^3.1.25",
-    "http-proxy-middleware": "^2.0.1",
+    "http-proxy-middleware": "^2.0.4",
     "husky": "^7.0.4",
-    "i18next": "^21.6.12",
+    "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "jest-watch-typeahead": "^0.6.5",
     "jest-websocket-mock": "^2.3.0",
-    "lint-staged": "^12.3.1",
+    "lint-staged": "^12.3.6",
     "moving-letters": "^1.0.1",
     "nth-check": ">=2.0.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "qrcode": "^1.5.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.1",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.5",
-    "react-router-bootstrap": "^0.26.0",
-    "react-router-dom": "^6.2.1",
+    "react-i18next": "^11.15.7",
+    "react-router-bootstrap": "^0.26.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
@@ -47,8 +52,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "husky install",
-    "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
-    "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,json,css,md}",
+    "lint": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,jsx,ts,tsx,json,css,md}",
+    "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,jsx,ts,tsx,json,css,md}",
     "version": "node scripts/changelog.mjs && git checkout -b \"prepare-v${npm_package_version}-$(date +%s)\" && git add --all && git commit --message \"chore(release): prepare v${npm_package_version}\" && git push --set-upstream origin $(git branch --show-current)",
     "postversion": "which gh && gh pr create --title \"chore(release): prepare v${npm_package_version}\" --body \"Prepares the v${npm_package_version} release.\" --assignee @me --label release --repo joinmarket-webui/joinmarket-webui --draft",
     "regtest:rebuild": "npm run regtest:clear && docker-compose --file docker/regtest/docker-compose.yml build --pull --no-cache",
@@ -81,7 +86,7 @@
     ]
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
+    "src/**/*.{js,jsx,ts,tsx,json,css,md}": "prettier --no-error-on-unmatched-pattern --write"
   },
   "jest": {
     "extraGlobals": [
