--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "regtest:logs:jmwalletd": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/jmwalletd_stdout.log",
     "regtest:logs:tumbler": "docker exec -t jm_regtest_joinmarket tail -f /root/.joinmarket/logs/TUMBLE.log",
     "regtest:mining": "watch -n 30 ./docker/regtest/mine-block.sh",
-    "regtest:tumble": "docker exec -it jm_regtest_joinmarket python tumbler.py funded.jmdat bcrt1qrnz0thqslhxu86th069r9j6y7ldkgs2tzgf5wx bcrt1qrnz0thqslhxu86th069r9j6y7ldkgs2tzgf5wx bcrt1qrnz0thqslhxu86th069r9j6y7ldkgs2tzgf5wx --minmakercount=1 --makercountrange=1 1 --timelambda=1 --wait-time=10 --liquiditywait=10"
+    "regtest:tumble": "docker exec -it jm_regtest_joinmarket python tumbler.py funded.jmdat --addrcount=1 --minmakercount=1 --makercountrange=1 1 --timelambda=1 --wait-time=10 --liquiditywait=10"
   },
   "eslintConfig": {
     "extends": [
