--- a/docker/regtest/docker-compose.yml
+++ b/docker/regtest/docker-compose.yml
@@ -4,30 +4,13 @@ services:
 
   joinmarket:
     container_name: jm_regtest_joinmarket
-    build:
-      context: ./dockerfile-deps/joinmarket/latest
-      dockerfile: Dockerfile
-    restart: unless-stopped
+    extends:
+      file: docker-compose-common.yml
+      service: joinmarket_native
     environment:
-      READY_FILE: /root/.regtest-initializer/btc_fully_synched
-      ENSURE_WALLET: "true"
-      REMOVE_LOCK_FILES: "true"
       jm_rpc_wallet_file: jm_primary
-      jm_minimum_makers: 1
-      jm_tx_broadcast: self
-      jm_blockchain_source: regtest
-      jm_network: testnet
-      jm_rpc_host: bitcoind
-      jm_rpc_port: 43782
       jm_rpc_user: joinmarket
       jm_rpc_password: joinmarket
-      jm_directory_nodes: ${JM_DIRECTORY_NODES:?You must set the onion address generated in prepare step to your .env file}
-      jm_socks5: "false" # will _not_ connect to local irc over tor
-    expose:
-      - 62601 # obwatch
-      - 27183 # joinmarketd
-      - 28183 # jmwalletd api
-      - 28283 # jmwalletd websocket
     ports:
       - "62601:62601"
       - "28183:28183"
@@ -42,41 +25,40 @@ services:
 
   joinmarket2:
     container_name: jm_regtest_joinmarket2
-    build:
-      context: ./dockerfile-deps/joinmarket/webui-standalone
-      dockerfile: Dockerfile
-    restart: unless-stopped
+    extends:
+      file: docker-compose-common.yml
+      service: joinmarket_jam_standalone
     environment:
-      READY_FILE: /root/.regtest-initializer/btc_fully_synched
-      ENSURE_WALLET: "true"
-      REMOVE_LOCK_FILES: "true"
       APP_USER: joinmarket
       APP_PASSWORD: joinmarket
       jm_rpc_wallet_file: jm_secondary
-      jm_minimum_makers: 1
-      jm_tx_broadcast: self
-      jm_blockchain_source: regtest
-      jm_network: testnet
-      jm_rpc_host: bitcoind
-      jm_rpc_port: 43782
       jm_rpc_user: joinmarket2
       jm_rpc_password: joinmarket2
-      jm_directory_nodes: ${JM_DIRECTORY_NODES:?You must set the onion address generated in prepare step to your .env file}
-      jm_socks5: "false" # will _not_ connect to local irc over tor
-      jm_taker_utxo_retries: 1 # easier testing of commitment failures on regtest; default is 3
-      maker_timeout_sec: 10 # easier testing of maker timeouts on regtest (and "Stall Monitor" retries); default is 60
-    expose:
-      - 80    # nginx
-      - 62601 # obwatch
-      - 27183 # joinmarketd
-      - 28183 # jmwalletd api
-      - 28283 # jmwalletd websocket
     ports:
-      - "29183:28183"
-      - "29283:28283"
       - "29080:80"
+      - "29183:28183" # exposed for "init setup" routine
     volumes:
       - "joinmarket2_datadir:/root/.joinmarket"
+      - "initializer_datadir:/root/.regtest-initializer"
+    depends_on:
+      - bitcoind
+      - bitcoind_regtest_initializer
+      - irc
+
+  joinmarket3:
+    container_name: jm_regtest_joinmarket3
+    extends:
+      file: docker-compose-common.yml
+      service: joinmarket_jam_standalone
+    environment:
+      jm_rpc_wallet_file: jm_tertiary
+      jm_rpc_user: joinmarket3
+      jm_rpc_password: joinmarket3
+    ports:
+      - "30080:80"
+      - "30183:28183" # exposed for "init setup" routine
+    volumes:
+      - "joinmarket3_datadir:/root/.joinmarket"
       - "initializer_datadir:/root/.regtest-initializer"
     depends_on:
       - bitcoind
@@ -140,6 +122,8 @@ services:
         rpcauth=joinmarket:260b4c5b1fbd09d75a4aabf90226282f$$76e170af088d43a588992cdd5e7bae2242b03c33aa672cccfd1fb75f9281299e
         # rpcauth (user=joinmarket2; password=joinmarket2)
         rpcauth=joinmarket2:521bf9f4468529d49c0a41f9c9f8fdbf$$63ae94a73d2aa45e7ee756945d9b1e469f9873ce026b815d676a748f777e0b8d
+        # rpcauth (user=joinmarket3; password=joinmarket3)
+        rpcauth=joinmarket3:85d4beaa74540c3b08f4fef50d74a59e$$3033c779ea4bfd02a1f3403bc4d012f3e6d19b355f74c5e8de1d3439979d5e4b
     expose:
       - 43782 # RPC
       - 39388 # P2P
@@ -183,5 +167,6 @@ volumes:
   initializer_datadir:
   joinmarket_datadir:
   joinmarket2_datadir:
+  joinmarket3_datadir:
   joinmarket_directory_node_datadir:
   irc_datadir:
